samples/_failures_safe/1761083724_ee0959_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c1987ed.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_3c1987ed.c:134:20: error: missing terminating " character
  134 |             printf("[%s] %s: %s
      |                    ^~~~~~~~~~~~
./samples/SAFE/__tmp_3c1987ed.c:134:13: error: expected expression at end of input
  134 |             printf("[%s] %s: %s
      |             ^~~~~~
./samples/SAFE/__tmp_3c1987ed.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c1987ed.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c1987ed.c:134:13: error: expected declaration or statement at end of input
